<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="?android:colorBackground">

    <ScrollView
        android:id="@+id/scrollContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnSkip"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <LinearLayout
                android:id="@+id/layoutIndicators"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="16dp"
                android:gravity="center_vertical"
                android:paddingHorizontal="16dp"
                android:baselineAligned="false">

                <ImageView
                    android:id="@+id/leaf1"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/add_leaf_to_indicate_question"
                    android:src="@drawable/ic_leaf"
                    app:tint="@android:color/white"
                    android:layout_gravity="start"/>

                <ImageView
                    android:id="@+id/leaf2"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/add_leaf_to_indicate_question"
                    android:src="@drawable/ic_leaf"
                    app:tint="@android:color/white"
                    android:layout_gravity="start"/>

                <ImageView
                    android:id="@+id/leaf3"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/add_leaf_to_indicate_question"
                    android:src="@drawable/ic_leaf"
                    app:tint="@android:color/white"
                    android:layout_gravity="start"/>

                <ImageView
                    android:id="@+id/leaf4"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/add_leaf_to_indicate_question"
                    android:src="@drawable/ic_leaf"
                    app:tint="@android:color/white"
                    android:layout_gravity="start"/>

                <ImageView
                    android:id="@+id/leaf5"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/add_leaf_to_indicate_question"
                    android:src="@drawable/ic_leaf"
                    app:tint="@android:color/white"
                    android:layout_gravity="start"/>
            </LinearLayout>


            <TextView
                android:id="@+id/tvStreakMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/random_questions_streak_achieved"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:layout_gravity="start"
                android:layout_marginTop="16dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tvQuestionCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1_of_5"
                android:textStyle="italic"
                android:layout_marginTop="12dp"
                android:layout_gravity="start"/>

            <ProgressBar
                android:id="@+id/progressBarHorizontal"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginTop="12dp"
                android:progress="0"
                android:max="100"
                android:progressTint="@android:color/white" />

            <TextView
                android:id="@+id/tvQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_goes_here"
                android:textSize="20sp"
                android:textColor="?android:textColorPrimary"
                android:layout_marginVertical="16dp" />

            <LinearLayout
                android:id="@+id/layoutOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="16dp"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="80dp" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/btnSkip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_skip"
        android:textColor="?attr/colorOnBackground"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>